feat: add create and update endpoints
