# src/main/java/org/onecx/tenantsvc/rs/external/v1/TenantControllerV1.java
@@ -11,7 +11,8 @@ import jakarta.ws.rs.core.Response;
 import org.onecx.tenantsvc.domain.daos.TenantMapDAO;
 
 import gen.io.github.onecx.tenantsvc.v1.TenantV1Api;
-import gen.io.github.onecx.tenantsvc.v1.model.TenantResponseDTOV1;
+import gen.io.github.onecx.tenantsvc.v1.model.ResponseTenantMapDTOV1;
+import gen.io.github.onecx.tenantsvc.v1.model.TenantMapDTOV1;
 import lombok.extern.slf4j.Slf4j;
 
 @Slf4j
@@ -23,14 +24,16 @@ public class TenantControllerV1 implements TenantV1Api {
     TenantMapDAO tenantMapDAO;
 
     @Override
-    public Response getTenantsByOrgId(String orgId) {
+    public Response getTenantMapsByOrgId(String orgId) {
 
         var tenantId = tenantMapDAO.findTenantIdByOrgId(orgId);
         if (tenantId.isEmpty()) {
             return Response.status(NOT_FOUND).build();
         }
-        var tenantResponseDTO = new TenantResponseDTOV1();
-        tenantResponseDTO.setTenantId(tenantId.get());
+        var tenantResponseDTO = new ResponseTenantMapDTOV1();
+        var tenantMapDTO = new TenantMapDTOV1();
+        tenantMapDTO.setTenantId(tenantId.get());
+        tenantResponseDTO.setTenantMap(tenantMapDTO);
         return Response.ok(tenantResponseDTO).build();
     }
 }
